--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <dependency>
       <groupId>com.comphenix.protocol</groupId>
       <artifactId>ProtocolLib</artifactId>
-      <version>4.5.1-SNAPSHOT</version>
+      <version>4.7.0</version>
       <scope>provided</scope>
     </dependency>
 
